src/assets/styles/index.css
@import 'material-icons/iconfont/material-icons.css';
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'AlbertSans';
  font-weight: 100 200 300 400 500 600 700 800 900;
  src: url('../fonts/AlbertSans-VariableFont_wght.ttf') format('truetype');
}

@font-face {
  font-family: 'Inter';
  font-weight: 100 200 300 400 500 600 700 800 900;
  src: url('../fonts/Inter-VariableFont_slnt,wght.ttf') format('truetype');
}

@font-face {
  font-family: 'RobotoMono';
  font-weight: 100 200 300 400 500 600 700 800;
  src: url('../fonts/RobotoMono-VariableFont_wght.ttf') format('truetype');
}

@layer base {
  h1 {
    @apply text-3xl font-bold;
  }

  h2 {
    @apply text-2xl font-semibold;
  }

  h3 {
    @apply text-xl font-medium;
  }

  html {
    @apply bg-stone-900 font-['Inter'] text-stone-300;
  }

  button {
    @apply cursor-pointer;
  }

  hr {
    @apply my-2 border border-stone-700;
  }

  /* scrollbar */
  ::-webkit-scrollbar {
    @apply h-2 w-2 bg-neutral-800;
  }

  ::-webkit-scrollbar-thumb {
    @apply bg-stone-600;
  }

  /* selection  */
  /* ::selection {
    @apply bg-ocean-green-800 text-ocean-green-200
  } */
}

@layer utilities {
  .menu-title {
    @apply text-base text-emerald-400;
  }

  .markdown-preview > h1,
  h2,
  h3 {
    @apply leading-[1.125];
  }

  .markdown-preview > h1 {
    @apply text-emerald-400;
  }

  .markdown-preview > hr {
    @apply border border-stone-700;
  }

  .markdown-preview span > .chord {
    @apply -top-[1.5rem];
  }

  .markdown-preview .chord {
    @apply relative font-extrabold text-stone-300;
  }

  .markdown-preview .chord::before {
    @apply absolute bottom-0 left-[-0.24rem] right-[-0.24rem] top-0 z-[-1] rounded-md bg-stone-300 bg-opacity-25 content-[''];
  }

  .markdown-preview > .lyrics {
    @apply font-medium;
  }

  .markdown-preview > .song-section {
    @apply leading-[3rem] text-emerald-400;
  }

  #app {
    @apply overflow-clip;
  }
}

